force-app/main/default/objects/AssetWarranty/fields/Coverage_Notes__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Notes__c</fullName>
    <description>Additional notes or overrides that help explain the asset-level warranty entitlement.</description>
    <label>Coverage Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>