force-app/main/default/objects/AssetWarranty/fields/CoveredCategories__c.field-meta.xml
<CustomField>
    <fullName>CoveredCategories__c</fullName>
    <description>Comma-separated list of part categories covered under this warranty term (e.g. Battery, Drive Motor, Pump).</description>
    <label>Covered Categories</label>
    <type>TextArea</type>
</CustomField>