force-app/main/default/objects/AssetWarranty/fields/Exclusion_Flag__c.field-meta.xml
<CustomField>
    <fullName>Exclusion_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether special exclusions apply to this asset warranty.</description>
    <label>Exclusion Flag</label>
    <type>Checkbox</type>
</CustomField>