force-app/main/default/objects/AssetWarranty/fields/Extension_Flag__c.field-meta.xml
<CustomField>
    <fullName>Extension_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the warranty was extended beyond the base term.</description>
    <label>Extension Flag</label>
    <type>Checkbox</type>
</CustomField>