force-app/main/default/objects/AssetWarranty/fields/LaborPolicy__c.field-meta.xml
<CustomField>
    <fullName>LaborPolicy__c</fullName>
    <label>Labor Policy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>