force-app/main/default/objects/AssetWarranty/fields/Mileage_Limit__c.field-meta.xml
<CustomField>
    <fullName>Mileage_Limit__c</fullName>
    <description>Maximum mileage allowed for the asset-level warranty coverage.</description>
    <label>Mileage Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>