force-app/main/default/objects/AssetWarranty/fields/MileageCap__c.field-meta.xml
<CustomField>
    <fullName>MileageCap__c</fullName>
    <description>Maximum odometer reading allowed under this warranty term (in miles).</description>
    <label>Mileage Cap</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>