force-app/main/default/objects/AssetWarranty/fields/Months_Limit__c.field-meta.xml
<CustomField>
    <fullName>Months_Limit__c</fullName>
    <description>Warranty duration limit in months for the asset-level warranty.</description>
    <label>Months Limit</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>