force-app/main/default/objects/AssetWarranty/fields/Vehicle__c.field-meta.xml
<CustomField>
    <fullName>Vehicle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>AssetWarranty</relationshipLabel>
    <relationshipName>AssetWarranty</relationshipName>
    <type>Lookup</type>
</CustomField>